# SukiSU_KernelPatch_patch

./: build.sh
kernel/: Makefile
patch/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt  kallsym.c  kallsym.h
